--- a/css/main.css
+++ b/css/main.css
@@ -1,35 +1,61 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
-  width: auto;
+  width: 100%;
+  height: 100vh;
   font-family: Verdana, sans-serif;
-  background-color: #f4f4f4;
+
+  background-color: #000;
   border: 2px solid black;
 }
 
 section {
-  margin: 150px 0;
-  display: flex;
-  align-items: center;
+  
+  
+  width: 96%;
+  height: 95vh;
+  margin: 0% 2%;
+  padding: 0;
+  border: 3px solid #ccc;
+  /*align-items: center;
   justify-content: center;
+  display: flex;
   flex-wrap: wrap;
-  /* border: 3px solid #eee; */
+   border: 3px solid #eee;*/
+}
+ 
+section div {
+  width: 96%;
+  height: 90vh;
+  padding: 0;
+  margin: 2vh 2%;
+  align-items: center;
+  border: 2px solid black;
 }
 
-section img {
-  border-radius: 5%;
+.imgg {
+  width: auto;
+  height: auto;
+  padding: 0;
+  border: 1px solid #111;
   margin: 5px;
   transition: ease-in-out;
-  transition: 0.3s;
-  border: 1px solid #111;
+  transition: 0.5s;
+  
 }
 
-section img:hover {
-  border-radius: 5%;
+.imgg:hover {
+  border-radius: 1rem;
   transform: scale(1.1);
-  box-shadow: 0 0 15px #000;
+  box-shadow: 0 1px 15px 0 #000;
 }
-
+/*
 .gallery {
   margin: 0;
 }
@@ -37,8 +63,55 @@ section img:hover {
 #gallery {
   margin: 0;
 }
+*/
+footer {
+  width: 100%;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  text-align: center;
+}
 
+@media (min-width: 768px) and (max-width: 1150px) {
+  .imgg {
+    width: 40%;
+    /*height: auto;
+    padding: 0;
+    border: 1px solid #111;
+    margin: 5px;
+    transition: ease-in-out;
+    transition: 0.5s;*/
+    
+  }
+  
+}
 
+@media (min-width: 580px) and (max-width: 768px) {
+  .imgg {
+    width: 60%;
+    /*height: auto;
+    padding: 0;
+    border: 1px solid #111;
+    margin: 5px;
+    transition: ease-in-out;
+    transition: 0.5s;*/
+    
+  }
+ 
+}
+
+@media (min-width: 180px) and (max-width: 580px) {
+  .imgg {
+    width: 100%;
+    /*height: auto;
+    padding: 0;
+    border: 1px solid #111;
+    margin: 5px;
+    transition: ease-in-out;
+    transition: 0.5s;*/
+    
+  }
+ 
+}
 
 /* Light Box CSS 
 
