--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/*
 body {
   margin: 0;
   padding: 0;
@@ -13,11 +13,28 @@ body {
 
   background-color: #000;
   border: 2px solid black;
-}
+}*/
 
-section {
+.center {
+  /**/
   
-  
+  text-align: center;
+  margin: 16.5%;
+}
+ .center button {
+   width: 10em;
+   height: 10em;
+   background-color: #fff;
+   /*padding: 5%;*/
+   border-radius: 50%;
+   border: #ccc 1px solid;
+ }
+
+ .center a {
+   text-decoration-line: none;
+   color: #000;
+ }
+/*section {
   width: 96%;
   height: 91vh;
   margin: 0% 2%;
@@ -26,17 +43,17 @@ section {
   justify-content: center;
   display: flex;
   flex-wrap: wrap;
-   border: 3px solid #eee;*/
-}
+   border: 3px solid #eee;
+}*/
  
-section div {
+/*section div {
   width: 96%;
   height: 90vh;
   padding: 0;
   margin: 2vh 2%;
   align-items: center;
-}
-
+}*/
+/*
 .imgg {
   width: auto;
   height: auto;
@@ -51,7 +68,7 @@ section div {
   border-radius: 1rem;
   transform: scale(1.1);
   box-shadow: 0 1px 15px 0 #000;
-}
+}*/
 /*
 .gallery {
   margin: 0;
@@ -63,15 +80,15 @@ section div {
 */
 footer {
   width: 100%;
-  padding: .5rem 0;
-  color: #fff;
+  color: #000;
+  /*padding: .5rem 0;
   border-top: 1px solid white;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid white;*/
   text-align: center;
 }
 
 
-
+/*
 @media (min-width: 769px) and (max-width: 1150px) {
   .imgg {
     width: 30%;
@@ -80,12 +97,12 @@ footer {
     border: 1px solid #111;
     margin: 5px;
     transition: ease-in-out;
-    transition: 0.5s;*/
+    transition: 0.5s;
     
   }
   
-}
-
+}*/
+/*
 @media (min-width: 581px) and (max-width: 768px) {
   .imgg {
     width: 40%;
@@ -94,12 +111,12 @@ footer {
     border: 1px solid #111;
     margin: 5px;
     transition: ease-in-out;
-    transition: 0.5s;*/
+    transition: 0.5s;
     
   }
  
-}
-
+}*/
+/*
 @media (min-width: 180px) and (max-width: 580px) {
   .imgg {
     width: 90%;
@@ -108,11 +125,11 @@ footer {
     border: 1px solid #111;
     margin: 5px;
     transition: ease-in-out;
-    transition: 0.5s;*/
+    transition: 0.5s;
     
   }
  
-}
+}*/
 
 /* Light Box CSS 
 
