--- a/css/main.css
+++ b/css/main.css
@@ -3,17 +3,43 @@
   padding: 0;
   box-sizing: border-box;
 }
-/*
+
 body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100vh;
-  font-family: Verdana, sans-serif;
+ /* font-family: Verdana, sans-serif;*/
 
   background-color: #000;
-  border: 2px solid black;
+ 
+}
+/*
+div {
+  width: 100%;
+  border: solid #000 ;
+ 
+  position: relative;
+}
+
+img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+
+
+}
+#carousel1 {
+  margin: 1rem 0;
+}
+
+#carousel1 > div{
+ 
+  height: 50vh;
 }*/
+
+
 
 .center {
   /**/
@@ -21,23 +47,23 @@ body {
   margin: 16.5%;
 }
 
- .center button {
-   width: 10em;
-   height: 10em;
-   background-color: #fff;
-   /*padding: 5%;*/
-   border-radius: 50%;
-   border: #ccc 1px solid;
- }
+.center button {
+  width: 10em;
+  height: 10em;
+  background-color: #fff;
+  /*padding: 5%;*/
+  border-radius: 50%;
+  border: #ccc 1px solid;
+}
 
- .center a {
-   text-decoration-line: none;
-   color: #000;
- }
+.center a {
+  text-decoration-line: none;
+  color: #000;
+}
 
 footer {
   width: 100%;
-  color: #000;
+  color: #fff;
   /*padding: .5rem 0;
   border-top: 1px solid white;
   border-bottom: 1px solid white;*/
